# kassi

./: .env.example  .gitignore  AGENTS.md  DEVPOST.md  README.md  architecture_diagram.md  demo_guide.md  pyproject.toml
case-studies/: 01-load-only-write-lock-regression.md  02-silent-latency-degradation.md  03-throttled-not-broken.md  04-downstream-timeout-cascade.md  README.md
docs/: SPLUNK_SETUP.md  SUBMISSION.md  demo.tape  shots.tape
docs/benchmark/: BENCHMARK.md  external_results.json  rcaeval_results.json  results.json
docs/dashboard/: kassi.css  kassi_overview.xml
docs/diagrams/: load-telemetry-loop.dot  run-orchestration.dot
examples/feed/: app.py  openapi.json
examples/gateway/: app.py  openapi.json
examples/orders/: app.py  openapi.json
examples/petclinic/: app.py  openapi.json
examples/petstore/: openapi.json
examples/storefront/: app.py  openapi.json
scripts/: access_proxy.py  assemble_video.py  benchmark.py  benchmark_external.py  benchmark_rcaeval.py  benchmark_report.py  capture_dashboard.py  capture_dashboard_video.py  capture_pilot.sh  capture_run.py  capture_shots.sh  dev_splunk_mcp.py  divine.sh  divine_petclinic.sh  make_cover.py  make_demo_repo.py  make_slides.py  purge_runs.py  replay_pilot.sh  seed_splunk.py  setup_dashboard.py  slowcat.sh  verify_correlate_live.py  verify_petclinic.py  verify_scenario.py  verify_storefront.py
src/kassi/: __init__.py  analysis.py  app.py  arcana.py  cli.py  githost.py  guardian.py  k6gen.py  llm.py  parse.py  pilot.py  publish.py  remediate.py  state.py  upstream.py
src/kassi/codegen/: __init__.py  compose.py  plan.py  slots.py
src/kassi/graphrag/: __init__.py  builder.py  digraph.py  (+1 more)
tests/: test_fsm.py  test_graphrag.py  test_verdict.py
tests/fixtures/: calliope-openapi.json  midas-openapi.json
